--- a/Baha'i/SE/GPB/p001-086FirstPeriod.html
+++ b/Baha'i/SE/GPB/p001-086FirstPeriod.html
@@ -108,7 +108,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">6</DIV></center><p></small></td>
 </tr>
@@ -201,7 +201,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a><p>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a><p>
 	[Mullá 'Alíy-i-Bastámí] <a href="../../Others/DBNN/BabsAutographTablets.html#para5"><i>The Dawn-Breakers</i></a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">11</DIV></center><p></small></td>
@@ -230,7 +230,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -390,7 +390,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -418,7 +418,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -818,7 +818,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a><p>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a><p>
 	[Mullá Báqir] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/BabsAutographTablets.html#para14">Báb's Tablets Addressed To The Letters Of The Living</a><p>
 	[Mírzá Ahmad] <i>Epistle to the Son of the Wolf</i>, <a href="../../Baha/EW/p001-182.html#para249">p. 173</a>; <i>The Dawn-Breakers</i>, pp. <a href="../../Others/DBNN/p500-526Ch23.html#para6">504</a>-5; <i>The Revelation of Bahá'u'lláh</i>, vol. 1, pp. <a href="../../Others/ROB/V1/p053-070Ch05.html">53</a>-4.
 	</small></td>
@@ -948,7 +948,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	<td VALIGN=top rowspan="3"><small>
 	<hr>
 	["Point round Whom the realities..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html#p294">p. 294</a><p>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">58</DIV></center></small></td>
 </tr>
@@ -1058,7 +1058,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	</td>
 	<td VALIGN=top rowspan="3"><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a><p>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a><p>
 	<a href="../../Others/DBNN/BabsAutographTablets.html">Letters of the Living</a>	
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">67</DIV></center></small></td>
@@ -1131,7 +1131,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	</td>
 	<td VALIGN=top rowspan="2"><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">74</DIV></center></small></td>
 </tr>
@@ -1263,7 +1263,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">82</DIV></center><p></small></td>
 </tr>
