--- a/Baha'i/SE/GPB/p087-234SecondPeriod.html
+++ b/Baha'i/SE/GPB/p087-234SecondPeriod.html
@@ -1327,7 +1327,7 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	<hr>
 	["myriad veils of light..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../../Others/ROB/V1/p257-282Ch16.html#p277">p. 277</a>; vol. 2, <a href="../../Others/ROB/V2/p065-106Ch04.html#p66">p. 66</a><p>
 	["the companions of the Crimson Ark"] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p315-328Ch21.html#p318">p. 318</a><p>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1374,7 +1374,7 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	</td>
 	<td VALIGN=top rowspan="2"><small>
 	<hr>
-	[Ridván] <i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#para75">&para75</a>; <a href="../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../Baha/GL/p003-346.html#para56">p. 31</a>; The Revelation of Bahá'u'lláh, vol. <a href="../../Others/ROB/V1/p351-363Index.html#Ridván">1</a>, <a href="../../Others/ROB/V2/p469-476Index.html#Ridván">2</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Ridván">3</a>, <a href="../../Others/ROB/V4/p463-485Index.html##Ridván,Gardenof">4</a><p>
+	[Ridván] <i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#para75">&para75</a>; <a href="../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../Baha/GL/p003-346.html#para56">p. 31</a>; The Revelation of Bahá'u'lláh, vol. <a href="../../Others/ROB/V1/p351-363Index.html#Ridván">1</a>, <a href="../../Others/ROB/V2/p469-476Index.html#Ridván">2</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Ridván">3</a>, <a href="../../Others/ROB/V4/p463-485Index.html#Ridván,Gardenof">4</a><p>
 	["Day of supreme felicity..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../../Others/ROB/V1/p257-282Ch16.html#p262">p. 262</a><p>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">154</DIV></center></small></td>
@@ -1440,7 +1440,7 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	<td VALIGN=top><small>
 	<hr>
 	["With the arrival of Bahá'u'lláh..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../../Others/ROB/V1/p283-293Ch17.html#p292">p. 292</a><p>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2430,7 +2430,7 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	['Abá-Basír and Siyyid Ashraf-i-Zanjání'], <i>The Revelation of Bahá'u'lláh</i>, vol. 2, pp. <a href="../../Others/ROB/V2/p222-235Ch10.html#223">223</a>-32; <i>Epistle to the Son of the Wolf</i>, <a href="../../Baha/EW/p001-182.html#para121">p. 73</a>; <i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../../Baha/GL/p003-346.html#p135">p. 135</a>.
+	['Abá-Basír and Siyyid Ashraf-i-Zanjání'], <i>The Revelation of Bahá'u'lláh</i>, vol. 2, pp. <a href="../../Others/ROB/V2/p222-235Ch10.html#p223">223</a>-32; <i>Epistle to the Son of the Wolf</i>, <a href="../../Baha/EW/p001-182.html#para121">p. 73</a>; <i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../../Baha/GL/p003-346.html#p135">p. 135</a>.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">200</DIV></center><p></small></td>
 </tr>
@@ -2564,7 +2564,7 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	<td VALIGN=top><small>
 	<hr>
 	[Súriy-i-Mulúk] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p301-336Ch15.html">p. 301</a><p>	
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
