--- a/Baha'i/SE/GPB/p321-401FourthPeriod.html
+++ b/Baha'i/SE/GPB/p321-401FourthPeriod.html
@@ -329,7 +329,7 @@
 </tr>
 <tr>
 	<td><a name="para32"></a>
-	Established in three regional centers, for the three major divisions of the North American continent, in Geyserville, in the Californian hills (1927), at Green Acre, situated on the banks of the Piscataqua in the state of Maine (1929), and at Louhelen Ranch near Davison, Michigan (1931), and recently supplemented by the International <a name="p340"></a>School founded at Pine Valley, Colorado Springs, dedicated to the training of Bahá'í teachers wishing to serve in other lands and especially in Latin America, these three embryonic Bahá'í educational institutions have, through a steady expansion of their programs, set an example worthy of emulation by other Bahá'í communities in both the East and the West. Through the intensive study of Bahá'í Scriptures and of the early history of the Faith; through the organization of courses on the teachings and history of Islám; through conferences for the promotion of inter-racial amity; through laboratory courses designed to familiarize the participants with the processes of the Bahá'í Administrative Order; through special sessions devoted to Youth and child training; through <a name="p341"></a>classes in public speaking; through lectures on Comparative Religion; through group discussion on the manifold aspects of the Faith; through the establishment of libraries; through teaching classes; through courses on Bahá'í ethics and on Latin America; through the introduction of winter school sessions; through forums and devotional gatherings; through plays and pageants; through picnics and other recreational activities, these schools, open to Bahá'ís and non-Bahá'ís alike, have set so noble an example as to inspire other Bahá'í communities in Persia, in the British Isles, in Germany, in Australia, in New Zealand, in India, in 'Iráq and in Egypt to undertake the initial measures designed to enable them to build along the same lines institutions that bid fair to evolve into the Bahá'í universities of the future.
+	Established in three regional centers, for the three major divisions of the North American continent, in Geyserville, in the Californian hills (1927), at Green Acre, situated on the banks of the Piscataqua in the state of Maine (1929), and at Louhelen Ranch near Davison, Michigan (1931), and recently supplemented by the International <a name="p341"></a>School founded at Pine Valley, Colorado Springs, dedicated to the training of Bahá'í teachers wishing to serve in other lands and especially in Latin America, these three embryonic Bahá'í educational institutions have, through a steady expansion of their programs, set an example worthy of emulation by other Bahá'í communities in both the East and the West. Through the intensive study of Bahá'í Scriptures and of the early history of the Faith; through the organization of courses on the teachings and history of Islám; through conferences for the promotion of inter-racial amity; through laboratory courses designed to familiarize the participants with the processes of the Bahá'í Administrative Order; through special sessions devoted to Youth and child training; through classes in public speaking; through lectures on Comparative Religion; through group discussion on the manifold aspects of the Faith; through the establishment of libraries; through teaching classes; through courses on Bahá'í ethics and on Latin America; through the introduction of winter school sessions; through forums and devotional gatherings; through plays and pageants; through picnics and other recreational activities, these schools, open to Bahá'ís and non-Bahá'ís alike, have set so noble an example as to inspire other Bahá'í communities in Persia, in the British Isles, in Germany, in Australia, in New Zealand, in India, in 'Iráq and in Egypt to undertake the initial measures designed to enable them to build along the same lines institutions that bid fair to evolve into the Bahá'í universities of the future.
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -984,7 +984,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[marriage] <a href="../../Baha/KA/p258-296Index.html#marriage"> <i>The Kitáb-i-Aqdas</i></a>
+	[marriage] <a href="../../Baha/KA/p258-296Index.html#Marriage"> <i>The Kitáb-i-Aqdas</i></a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">374</DIV></center><p></small></td>
 </tr>
@@ -1060,7 +1060,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">377</DIV></center><p></small></td>
 </tr>
@@ -1507,7 +1507,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">397</DIV></center><p></small></td>
 </tr>
