--- a/Baha'i/SE/GPB/p235-320ThirdPeriod.html
+++ b/Baha'i/SE/GPB/p235-320ThirdPeriod.html
@@ -388,7 +388,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">254</DIV></center><p></small></td>
 </tr>
@@ -1599,7 +1599,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#notes1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a><p>
+	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i>, p. <a href="../../Baha/KA/p165-251Notes.html#note1">165</a>, <a href="../../Baha/KA/p165-251Notes.html#note115">216</a>; <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para157">p. 231</a> ; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a><p>
 	[Súriy-i-Mulúk] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p301-336Ch15.html">p. 301</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
