--- a/download.html
+++ b/download.html
@@ -77,15 +77,16 @@ Right click on each file and download to your computer.<br>
 </center>
 
 
-<br><br>
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+    <td>
+		   <FORM ACTION="index.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="H" NAME=home>
+		   </FORM>
+	   </td>
+</tr>
+</table>
 
-<hr>
-<center><h2><font color="#1e68fe">Software</font></h2></center>
-<h3><a href="https://drive.google.com/file/d/0B6cYw5IwKTYsUjRvbTgyMFBZZGM/edit?usp=sharing">The Kitáb-i-Aqdas</a></h3>
-Rendered as a <i>Windows 3.1</i> Help File. Click on link to download, and then run downloaded installation program.
-Download size is 1.16 Mbytes. Installation requires 3.03 Mbytes of disk space.
-
-<center><small><p><a href="index.html">Home</a>
 
 </center><p><p>
 <!-- to allow scrolling when hyperlinking to last entries...enough for 4K display -->
