--- a/CLUI/UnifiedIndex.html
+++ b/CLUI/UnifiedIndex.html
@@ -12186,7 +12186,7 @@ India<a name="India"></a>,
 	</div>
 	</blockquote>
 Inevitable, {<tt>TOB</tt>: <a href= "../Baha'i/Baha/TOB/p001-270TOB.html#p117">117</a>}<br>
-<a class="hh" title="Free from error. The doctrine of the 'Most Great Infallibility' of the Manifestation of God was enunciated by Bahá'u'lláh in the Kitáb-i-Aqdas and expanded upon in the Tablet of Ishráqát. He makes a distinction between 'conferred' and 'the Most Great Infallibility' and asserts that the Most Great Infallibility is the inherent and exclusive right of the Prophet. The former derives its authority from the latter. Bahá'u'lláh Himself possessed the Most Great Infallibility while He conferred infallibility upon 'Abdu'l-Bahá, Shoghi Effendi and the Universal House of Justice. " href="../CLUG/UnifiedGlossary.html#Infallibility">Infallibility</a><a name="Infallibility"></a>, 
+<a class="hh" title="Free from error. The doctrine of the 'Most Great Infallibility' of the Manifestation of God was enunciated by Bahá'u'lláh in the Kitáb-i-Aqdas and expanded upon in the Tablet of Ishráqát. He makes a distinction between 'conferred' and 'the Most Great Infallibility' and asserts that the Most Great Infallibility is the inherent and exclusive right of the Prophet. The former derives its authority from the latter. Bahá'u'lláh Himself possessed the Most Great Infallibility while He conferred infallibility upon 'Abdu'l-Bahá, Shoghi Effendi and the Universal House of Justice. " href="../CLUG/UnifiedGlossary.html#Infallibility">Infallibility</a><a name="Infallibility"></a>,
 	<blockquote>
 	<div id="resizeablediv">	
 	{<tt>KA</tt>: <a href= "../Baha'i/Baha/KA/p012-018Desc.html#p14">14</a>}<br>
@@ -12194,7 +12194,7 @@ Inevitable, {<tt>TOB</tt>: <a href= "../Baha'i/Baha/TOB/p001-270TOB.html#p117">1
 	<i>Ishráqát</i> on<a name="Ishráqátoninfallibility"></a>, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p145-160Ch09.html#p149">149</a>-50}<br>
 	Logic, fallibility of, {<tt>SAQ</tt>: <a href= "../Baha'i/AB/SAQ/p261-306Part5.html#p297">297</a>-98}<br>
 	many meanings of, {<tt>TOB</tt>: <a href= "../Baha'i/Baha/TOB/p001-270TOB.html#p108">108</a>}<br>
-	Most Great Infallibility<a name="InfallibilityMostGreat"></a>, 
+	Most Great Infallibility<a name="InfallibilityMostGreat"></a>, 'Ismat-i-Kubrá,
 		<blockquote>
 		{<tt>ROB1</tt>: <a href="../Baha'i/Others/ROB/V1/p105-152Ch09.html#p133">133</a>}<br>
 		{<tt>ROB2</tt>: <a href="../Baha'i/Others/ROB/V2/p236-269Ch11.html#p262">262</a>}<br>
@@ -17488,7 +17488,7 @@ Qum<a name="Qum"></a>,
 				</blockquote>
 			57 (<i>Al-Hadeed</i>, The Iron),
 				<blockquote>
-				57:3<a name="Qur'án57:3"></a>, {<tt>KI</tt>: <a href="../Baha'i/Baha/KI/p095-258.html#para50">143</a>}, {<tt>SVFV</tt>: <a href="../Baha'i/Baha/TSVATFV.html#para54">15</a>, <a href="../Baha'i/Baha/TSVATFV.html#para85">27</a>}<br>
+				57:3<a name="Qur'án57:3"></a>, {<tt>KI</tt>: <a href="../Baha'i/Baha/KI/p095-258.html#para50">143</a>}, {<tt>SVFV</tt>: <a href="../Baha'i/Baha/TSVATFV.html#pxiii">xiii</a>, <a href="../Baha'i/Baha/TSVATFV.html#para54">15</a>, <a href="../Baha'i/Baha/TSVATFV.html#para85">27</a>}<br>
 				</blockquote>
 			58 (<i>Al-Mujadila</i>, The Pleading)<br>
 			59 (<i>Al-Hashr</i>, The Gathering),
