--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ The presentation of the books is unusual in that the main text appears on the le
 This allows the reader to read the main text of the book in an HTML browser, uninterrupted by footnotes or other items.
 
 <p>
-Items <span style="background-color: #ffffCC" TITLE="emphasized or made prominent">highlighted</span> can be hovered over for a quick definition.  For best results of this function, please use desktop versions of Firefox or Chrome browsers.
+Items <span style="background-color: #ffffCC" TITLE="emphasized or made prominent">highlighted</span> can be hovered over for a brief definition from the <a href="CLUG/UnifiedGlossary.html">glossary</a>.  For best results of this function, please use desktop versions of Firefox or Chrome browsers.  The linking of terms to their glossary entries is a 'first attempt' at trying to define the terms in the passages in which they appear.  The reader should take the definitions as one of a possible array of meanings of the term in the context of the passage being read.  It is hoped that in time these links will become more and more refined to better convey their meaning in context.
 
 <p>
 A big thank you to the friends who have proof-read the contents of this library to ensure the integrity of the works contained therein.
