--- a/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
+++ b/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
@@ -1159,16 +1159,16 @@ The Bahá'í day ends and a new one begins at sunset; consequently, the day on w
 			   <td align="center">2022-23</td>
 		</tr>
 		<tr>
-		       <td><b>9. Bahá</b></td>
-		       <td align="center"><b>Splendour</b></td>
-			   <td align="center"><b>B.E. 180</b></td>
-			   <td align="center"><b>2023-24</b></td>
+		       <td>9. Bahá</td>
+		       <td align="center">Splendour</td>
+			   <td align="center">B.E. 180</td>
+			   <td align="center">2023-24</td>
 		</tr>
 		<tr>
-		       <td>10. Hubb</td>
-		       <td align="center">Love</td>
-			   <td align="center">B.E. 181</td>
-			   <td align="center">2024-25</td>			   
+		       <td><b>10. Hubb</b></td>
+		       <td align="center"><b>Love</b></td>
+			   <td align="center"><b>B.E. 181</b></td>
+			   <td align="center"><b>2024-25</b></td>
 		</tr>
 		<tr>
 		       <td>11. Bahháj</td>
