--- a/Baha'i/AB/SFWAB/Cover.html
+++ b/Baha'i/AB/SFWAB/Cover.html
@@ -1,1 +1,125 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!-- Covenant Library: \cl\Baha'i\Baha'i\AB\SFWAB\Cover.html -->
 
+<!-- ISSUES LOG 
+
+-->
+
+<html>
+<head>
+	<title>Selections From The Writings of 'Abdu'l-Bahá, Cover</title>
+</head>
+
+<body>
+
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="../../../index.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>
+	   </td>
+       <td>
+	   	   <FORM ACTION="../../../index.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="^" NAME=up>
+		   </FORM>
+		   <FORM ACTION="../../../index.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="H" NAME=home>
+		   </FORM>
+	   </td>
+       <td>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>
+	   </td>
+</tr>
+</table>
+
+<table border="0" cellspacing="2" cellpadding="0" WIDTH="100%" bgcolor="">
+<tr>
+	<td><a name="cover"></a>
+	<table align="CENTER" border="1" cellspacing="10" cellpadding="5" WIDTH="100%" bgcolor="" style="background-image: url('coverphoto.jpg');" bordercolor="#f6d574">
+		<tr >
+			<td width="20%" style="border: none;"><br><br><br><br><br></td>
+			<td style="border: none;"></td>
+			<td width="20%"style="border: none;"></td>
+		</tr>
+		<tr>
+			<td style="border: none;"></td>
+			<td bgcolor="black" style="border: 2px solid gold;">
+				<center>
+					<h2>
+						<font color="#f6d574"><br>SELECTIONS FROM THE WRITINGS<p>OF 'ABDU'L-BAHÁ<br></font>
+					</h2>
+				</center>
+				<p>
+			</td>
+			<td style="border: none;"></td>
+		</tr>
+		<tr height="20%">
+			<td style="border: none;"><br><br><br><br><br></td>
+			<td style="border: none;"></td>
+			<td style="border: none;"></td>
+		</tr>
+	</table>
+	</td>
+</tr>
+<tr>
+	<td><a name="cover2"></a>
+	<br><br><br>
+	<center><h3>Selections From The<br>Writings of</h3><h2>'ABDU'L-BAHÁ</h2>
+    <br>
+	<i><h4>Compiled by the Research Department of<br>the Universal House of Justice<br>Translated<br>by<br>A COMMITTEE<br>at the Bahá'í World Centre<br>and by<br>MARZIEH GAIL</h4></i>
+	<br><br><br><br><br><br>
+	BAHÁ'Í WORLD CENTRE<p>HAIFA</center>
+	<br><br><br>
+	</td>
+</tr>
+<tr>
+	<td><a name="cover3"></a>
+	<br><br><br>
+	<center><small>
+	Copyright 1978 THE UNIVERSAL HOUSE OF JUSTICE<br>
+	COPYRIGHT UNDER THE BERNE CONVENTION<br>
+	<br><br><br>
+	
+
+	ISBN 0 85398 136 1 LIGHTWEIGHT EDITION<br><br>1982 IMPRINT
+	</blockquote></blockquote>
+	<br><br><br>
+	
+	<center>
+	PRINTED IN GREAT BRITAIN AT<br>THE CAMELOT PRESS LIMITED, SOUTHAMPTON
+	</small></center>
+	<br><br><br>
+	</td>
+</tr>
+
+</table>
+
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+       <td>
+	   	   <FORM ACTION="../../../index.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="<" NAME=back>
+		   </FORM>
+	   </td>
+       <td>
+	   	   <FORM ACTION="../../../index.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="^" NAME=up>
+		   </FORM>
+		   <FORM ACTION="../../../index.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE="H" NAME=home>
+		   </FORM>
+	   </td>
+       <td>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
+		   <INPUT TYPE=submit VALUE=">" NAME=next>
+		   </FORM>
+	   </td>
+</tr>
+</table>
+
+
+</body>
+</html>
